--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title> Angular Client Side Template </title>
-      <script src="./vendors/angular.min.js" charset="utf-8"></script>
-      <script src="./scripts/client.js" charset="utf-8"></script>
-        <link type="text/css" rel="stylesheet" href="./styles/styles.css">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="./vendors/angular.min.js" charset="utf-8"></script>
+        <script src="./scripts/client.js" charset="utf-8"></script>
+          <link type="text/css" rel="stylesheet" href="./styles/styles.css">
   </head>
   <body ng-app="AngularApp" ng-controller="MainController as mc">
-    <h1> Angular Client Side Template </h1>
-    {{mc.message}}
-      
+    <section>
+      <h1> Angular Client Side Template </h1>
+      {{mc.message}}
+    </section>
   </body>
 </html>
