--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="./vendors/angular.min.js" charset="utf-8"></script>
         <script src="./scripts/client.js" charset="utf-8"></script>
+          <link rel="icon" type="image/png" href="./assets/images/favicons/favicon.ico" />
           <link type="text/css" rel="stylesheet" href="./styles/styles.css">
   </head>
   <body ng-app="AngularApp" ng-controller="MainController as mc">
