--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script src="./vendors/angular.min.js" charset="utf-8"></script>
-        <script src="./scripts/client.js" charset="utf-8"></script>
-          <link rel="icon" type="image/png" href="./assets/images/favicons/favicon.ico" />
+        <script src="./assets/vendors/angular.min.js"></script>
+        <script src="./scripts/client.js"></script>
+          <link rel="icon" type="image/ico" href="./assets/images/favicon.ico"/>
           <link type="text/css" rel="stylesheet" href="./styles/styles.css">
   </head>
   <body ng-app="AngularApp" ng-controller="MainController as mc">
