--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body ng-app="AngularApp" ng-controller="MainController as mc">
     <section>
       <h1> Angular Client Side Template </h1>
-      {{mc.message}}
+      <div> Status: {{mc.message}} </div>
     </section>
   </body>
 </html>
